Needed to store google credential auth token in a better way. Also minor changed to endpoing setting in account info file.

--- a/README.html
+++ b/README.html
@@ -158,7 +158,7 @@ export GOOGLE_DV360_ACCOUNT_INFO=/home/ubuntu/.creds/.google/360accountinfo.json
         <pre><code>{
     "advertiser_id": &lt;your advertisers id&gt;,
     "partner_id": &lt;your partner id&gt;,
-    "service_endpoint": "https://displayvideo.googleapis.com/v1/",
+    "service_endpoint": "https://displayvideo.googleapis.com/",
     "scopelist" : [ "https://www.googleapis.com/auth/display-video", "https://www.googleapis.com/auth/doubleclickbidmanager"]
 }
 </code></pre>
